[gd_scene load_steps=3 format=2]

[ext_resource path="res://data/scenes/menu/options.gd" type="Script" id=1]
[ext_resource path="res://data/resources/themes/default.tres" type="Theme" id=2]

[node name="Options" type="Control" groups=[
"menu",
]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -184.0
margin_right = 125.0
margin_bottom = 184.0
rect_min_size = Vector2( 250, 0 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 28.0
text = "Options"
align = 1
valign = 1

[node name="ControlOptions" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 250.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 60 )
text = "Control Options"

[node name="AudioOptions" type="Button" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 250.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 60 )
text = "Audio Options"

[node name="VideoOptions" type="Button" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 250.0
margin_bottom = 268.0
rect_min_size = Vector2( 0, 60 )
text = "Video Options"

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_top = 288.0
margin_right = 250.0
margin_bottom = 288.0

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 308.0
margin_right = 250.0
margin_bottom = 368.0
rect_min_size = Vector2( 0, 60 )
text = "Back"
[connection signal="pressed" from="VBoxContainer/ControlOptions" to="." method="_on_control_options_pressed"]
[connection signal="pressed" from="VBoxContainer/AudioOptions" to="." method="_on_audio_options_pressed"]
[connection signal="pressed" from="VBoxContainer/VideoOptions" to="." method="_on_video_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
